# eml-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml
benches/: eval_bench.rs  parallel_bench.rs
benchmarks/: gate.json
docs/: README.md  acceptance.md  api-stability.md  architecture.md  cli.md  compliance.md  developer-guide.md  ecosystem.md  eml-paper-summary.md  interoperability.md  maintenance.md  no-std-assessment.md  observability.md  paper-basis-catalog.json  paper-basis-catalog.md  scope.md  testing.md  user-guide.md  versioning.md
examples/: metrics_probe.rs  pipeline_api.rs  profile_pipeline.rs  symbolic_regression_loop.rs
fuzz/: Cargo.toml
fuzz/corpus/autodiff_simplify/: activation_mix  branchy_activation_mix  pow_i64_min_neg_overflow  power_compaction  transcendental_product
fuzz/corpus/expr_eval_consistency/: matching_non_finite_backends
fuzz/fuzz_targets/: autodiff_simplify.rs  expr_eval_consistency.rs  parse_lower_eval.rs
include/: eml_rs.h
scripts/: bench_gate.py  collect_metrics.py  nightly_artifact_audit.py  paper_reproduction_summary.py  parallel_bench_summary.py  reference_compare.py  sr_research_benchmark.py
src/: api.rs  bytecode.rs  core.rs  error.rs  ffi.rs  ir.rs  lib.rs  lowering.rs  opt.rs  plugin.rs  portable.rs  profiling.rs  verify.rs
tests/: api_pipeline.rs  api_stability.rs  cli.rs  cross_backend.rs  eval_parallel.rs  ffi_error_coverage.rs  fuzz_regressions.rs  paper_reproduction.rs  policy_semantics.rs  portable_graph.rs  profiling_metrics.rs  reference_compare.rs  verify_parallel.rs
(+23 files in other folders)
