[workspace]
members = ["crates/eml-core", "crates/eml-lowering"]
resolver = "2"

[package]
name = "eml-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Minimal EML operator library skeleton: core + IR + verification."
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
eml-core = { version = "0.1.0", path = "crates/eml-core" }
eml-lowering = { version = "0.1.0", path = "crates/eml-lowering" }
num-complex = "0.4"

[dev-dependencies]
criterion = "0.8"
libm = "0.2"
serde_json = "1.0"

[[bench]]
name = "eval_bench"
harness = false
