[package]
name = "eml-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
num-complex = "0.4"
eml-rs = { path = ".." }

[[bin]]
name = "parse_lower_eval"
path = "fuzz_targets/parse_lower_eval.rs"
test = false
doc = false
bench = false

[[bin]]
name = "expr_eval_consistency"
path = "fuzz_targets/expr_eval_consistency.rs"
test = false
doc = false
bench = false

[[bin]]
name = "autodiff_simplify"
path = "fuzz_targets/autodiff_simplify.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
